<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FTM</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="check_button">Check IN/OUT</string>
    <string name="hello">Hello WORLD!</string>
    <string name="event_list_header">Eventos</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="today_time">"Today's Hours"</string>
    <string name="empty_time">00:00:00</string>
    <string name="export">Export&#8230;</string>
    <string name="restore">Restore&#8230;</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="delete_previous_month">Delete Previous Month</string>
    <string name="absence_fix_title">Use "Absence Fix"</string>
    <string name="absence_fix_sumary">Automatically mark absence days as "On Time" with proper calculations.</string>
    <string name="flex_mode_title">Schedule</string>
    <string name="flex_mode_dialog">Select your Schedule</string>
    <string-array name="flex_mode_entries">
        <item>Flex Normal</item>
        <item>Flex Dos</item>
        <item>Flex Morning</item>
        <item>Flex Evening</item>
    </string-array>
    <string-array name="flex_mode_values">
        <item>normal</item>
        <item>dos</item>
        <item>morning</item>
        <item>evening</item>
    </string-array>
    <string name="flex_mode_default">Flex Normal</string>
	<string name="settingsTitle">Settings</string>
    
</resources>
