<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/check_action" 
        android:title="@string/check_in"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_check_in_dark"/>
    <item 
        android:id="@+id/export" 
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/export"/>
    <item 
        android:id="@+id/restore" 
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/restore"/>
    <item
        android:id="@+id/delete_previous_month"
        android:orderInCategory="96"
        android:showAsAction="never"
        android:title="@string/delete_previous_month"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item 
        android:id="@+id/menu_about" 
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    

</menu>
